--- a/platform/RemotingNG/TCP/TCP_vs100.vcxproj.filters
+++ b/platform/RemotingNG/TCP/TCP_vs100.vcxproj.filters
@@ -2,13 +2,13 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="TCP">
-      <UniqueIdentifier>{2915fc66-fc09-43ea-b033-e392286afd82}</UniqueIdentifier>
+      <UniqueIdentifier>{1f6d9ed7-3c78-48b0-a92f-39d6b43a2d93}</UniqueIdentifier>
     </Filter>
     <Filter Include="TCP\Header Files">
-      <UniqueIdentifier>{fbcff22f-460e-4ace-9b43-6e8ecbb9148d}</UniqueIdentifier>
+      <UniqueIdentifier>{d92504da-50f9-4f42-882f-00155c61e70e}</UniqueIdentifier>
     </Filter>
     <Filter Include="TCP\Source Files">
-      <UniqueIdentifier>{338b76f6-9d79-4d8a-927d-0819bf4dd24c}</UniqueIdentifier>
+      <UniqueIdentifier>{e0545cd7-44ad-4ee3-bcaf-0924c46c3f13}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -19,6 +19,9 @@
       <Filter>TCP\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\Poco\RemotingNG\TCP\ConnectionManager.h">
+      <Filter>TCP\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Poco\RemotingNG\TCP\CredentialsStore.h">
       <Filter>TCP\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\Poco\RemotingNG\TCP\Frame.h">
@@ -69,6 +72,9 @@
       <Filter>TCP\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\ConnectionManager.cpp">
+      <Filter>TCP\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CredentialsStore.cpp">
       <Filter>TCP\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\Frame.cpp">
