--- a/platform/RemotingNG/TCP/TCP_vs140.vcxproj.filters
+++ b/platform/RemotingNG/TCP/TCP_vs140.vcxproj.filters
@@ -2,13 +2,13 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="TCP">
-      <UniqueIdentifier>{81cd6f0a-92ee-4d7c-9966-7a516faa4463}</UniqueIdentifier>
+      <UniqueIdentifier>{5b2edc2a-2038-4a9e-9651-2c196e272c40}</UniqueIdentifier>
     </Filter>
     <Filter Include="TCP\Header Files">
-      <UniqueIdentifier>{8b99a332-2f65-4f6b-bd9e-110f05f3a2eb}</UniqueIdentifier>
+      <UniqueIdentifier>{a6ef3ab7-a6de-4405-b2aa-bcfb173769a1}</UniqueIdentifier>
     </Filter>
     <Filter Include="TCP\Source Files">
-      <UniqueIdentifier>{ec4e3b3b-23a4-45aa-bd11-3a4a9dcdfd87}</UniqueIdentifier>
+      <UniqueIdentifier>{a4b39e48-d620-437a-8cb6-be370152b193}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -19,6 +19,9 @@
       <Filter>TCP\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\Poco\RemotingNG\TCP\ConnectionManager.h">
+      <Filter>TCP\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Poco\RemotingNG\TCP\CredentialsStore.h">
       <Filter>TCP\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\Poco\RemotingNG\TCP\Frame.h">
@@ -69,6 +72,9 @@
       <Filter>TCP\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\ConnectionManager.cpp">
+      <Filter>TCP\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CredentialsStore.cpp">
       <Filter>TCP\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\Frame.cpp">
