--- a/platform/RemotingNG/TCP/TCP_vs90.vcproj
+++ b/platform/RemotingNG/TCP/TCP_vs90.vcproj
@@ -399,6 +399,8 @@
 				<File
 					RelativePath=".\include\Poco\RemotingNG\TCP\ConnectionManager.h"/>
 				<File
+					RelativePath=".\include\Poco\RemotingNG\TCP\CredentialsStore.h"/>
+				<File
 					RelativePath=".\include\Poco\RemotingNG\TCP\Frame.h"/>
 				<File
 					RelativePath=".\include\Poco\RemotingNG\TCP\FrameFactory.h"/>
@@ -433,6 +435,8 @@
 					RelativePath=".\src\Connection.cpp"/>
 				<File
 					RelativePath=".\src\ConnectionManager.cpp"/>
+				<File
+					RelativePath=".\src\CredentialsStore.cpp"/>
 				<File
 					RelativePath=".\src\Frame.cpp"/>
 				<File
