--- a/platform/RemotingNG/TCP/TCP_x64_vs110.vcxproj.filters
+++ b/platform/RemotingNG/TCP/TCP_x64_vs110.vcxproj.filters
@@ -2,13 +2,13 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="TCP">
-      <UniqueIdentifier>{19bd3bdd-0d93-4094-b511-05821d4de558}</UniqueIdentifier>
+      <UniqueIdentifier>{999706cd-cbec-4cb4-8a33-74287a6a7f55}</UniqueIdentifier>
     </Filter>
     <Filter Include="TCP\Header Files">
-      <UniqueIdentifier>{c25d706f-dc23-41b6-92de-24397fd6d60c}</UniqueIdentifier>
+      <UniqueIdentifier>{0784c5fb-2d90-4210-97d0-00247bcc2c47}</UniqueIdentifier>
     </Filter>
     <Filter Include="TCP\Source Files">
-      <UniqueIdentifier>{ba93b7e6-c007-45ca-a981-7b55b0495fae}</UniqueIdentifier>
+      <UniqueIdentifier>{24e14e9f-e2d8-4a5c-8a22-d084b3120556}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -19,6 +19,9 @@
       <Filter>TCP\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\Poco\RemotingNG\TCP\ConnectionManager.h">
+      <Filter>TCP\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Poco\RemotingNG\TCP\CredentialsStore.h">
       <Filter>TCP\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\Poco\RemotingNG\TCP\Frame.h">
@@ -69,6 +72,9 @@
       <Filter>TCP\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\ConnectionManager.cpp">
+      <Filter>TCP\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CredentialsStore.cpp">
       <Filter>TCP\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\Frame.cpp">
