--- a/platform/RemotingNG/TCP/TCP_x64_vs120.vcxproj.filters
+++ b/platform/RemotingNG/TCP/TCP_x64_vs120.vcxproj.filters
@@ -2,13 +2,13 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="TCP">
-      <UniqueIdentifier>{4c6beab5-f2d6-4413-b322-ca7a22715278}</UniqueIdentifier>
+      <UniqueIdentifier>{cb42a7ac-8277-4127-8ddc-f7dbaaf4acef}</UniqueIdentifier>
     </Filter>
     <Filter Include="TCP\Header Files">
-      <UniqueIdentifier>{51a03610-d2c8-425f-a2e7-b9c5bf99a4d0}</UniqueIdentifier>
+      <UniqueIdentifier>{b9078aee-2b91-4436-9388-6ed91400c668}</UniqueIdentifier>
     </Filter>
     <Filter Include="TCP\Source Files">
-      <UniqueIdentifier>{53c1c9b5-1c49-47a2-b53f-81ee75dd2d26}</UniqueIdentifier>
+      <UniqueIdentifier>{40ec61af-1b5a-45b9-ad02-ef68b37aa5fa}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -19,6 +19,9 @@
       <Filter>TCP\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\Poco\RemotingNG\TCP\ConnectionManager.h">
+      <Filter>TCP\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Poco\RemotingNG\TCP\CredentialsStore.h">
       <Filter>TCP\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\Poco\RemotingNG\TCP\Frame.h">
@@ -69,6 +72,9 @@
       <Filter>TCP\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\ConnectionManager.cpp">
+      <Filter>TCP\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CredentialsStore.cpp">
       <Filter>TCP\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\Frame.cpp">
