--- a/platform/RemotingNG/TCP/TCP_x64_vs90.vcproj
+++ b/platform/RemotingNG/TCP/TCP_x64_vs90.vcproj
@@ -404,6 +404,8 @@
 				<File
 					RelativePath=".\include\Poco\RemotingNG\TCP\ConnectionManager.h"/>
 				<File
+					RelativePath=".\include\Poco\RemotingNG\TCP\CredentialsStore.h"/>
+				<File
 					RelativePath=".\include\Poco\RemotingNG\TCP\Frame.h"/>
 				<File
 					RelativePath=".\include\Poco\RemotingNG\TCP\FrameFactory.h"/>
@@ -438,6 +440,8 @@
 					RelativePath=".\src\Connection.cpp"/>
 				<File
 					RelativePath=".\src\ConnectionManager.cpp"/>
+				<File
+					RelativePath=".\src\CredentialsStore.cpp"/>
 				<File
 					RelativePath=".\src\Frame.cpp"/>
 				<File
