--- a/platform/RemotingNG/TCP/TCP_WEC2013_vs120.vcxproj
+++ b/platform/RemotingNG/TCP/TCP_WEC2013_vs120.vcxproj
@@ -260,6 +260,7 @@
     <ClInclude Include="include\Poco\RemotingNG\TCP\ChannelStream.h"/>
     <ClInclude Include="include\Poco\RemotingNG\TCP\Connection.h"/>
     <ClInclude Include="include\Poco\RemotingNG\TCP\ConnectionManager.h"/>
+    <ClInclude Include="include\Poco\RemotingNG\TCP\CredentialsStore.h"/>
     <ClInclude Include="include\Poco\RemotingNG\TCP\Frame.h"/>
     <ClInclude Include="include\Poco\RemotingNG\TCP\FrameFactory.h"/>
     <ClInclude Include="include\Poco\RemotingNG\TCP\FrameHandler.h"/>
@@ -278,6 +279,7 @@
     <ClCompile Include="src\ChannelStream.cpp"/>
     <ClCompile Include="src\Connection.cpp"/>
     <ClCompile Include="src\ConnectionManager.cpp"/>
+    <ClCompile Include="src\CredentialsStore.cpp"/>
     <ClCompile Include="src\Frame.cpp"/>
     <ClCompile Include="src\FrameQueue.cpp"/>
     <ClCompile Include="src\Listener.cpp"/>
