Event arguments are now serialized in binary format in BridgeWrapper. This enables using all Remoting types as event arguments, not just those that can be represented in JSON (e.g., std::vector<char>).

--- a/platform/JS/Bridge/Makefile
+++ b/platform/JS/Bridge/Makefile
@@ -9,7 +9,8 @@
 include $(POCO_BASE)/build/rules/global
 
 objects = Serializer Deserializer Listener \
-	BridgeWrapper JSONEventSerializer
+	TaggedBinarySerializer TaggedBinaryReader \
+	BridgeWrapper
 
 target         = PocoJSBridge
 target_version = 1
