--- a/protocols/Makefile
+++ b/protocols/Makefile
@@ -12,4 +12,5 @@ clean all:
 	$(MAKE) -C MQTT $(MAKECMDGOALS)
 	$(MAKE) -C XBee $(MAKECMDGOALS)
 	$(MAKE) -C BtLE $(MAKECMDGOALS)
+	$(MAKE) -C UDP $(MAKECMDGOALS)
 	$(MAKE) -C WebTunnel $(MAKECMDGOALS)
